# lambdapp

./: .gitignore  configure.ac  lambdapp.cc  lambdapp.h  test.cc
src/include/: Makefile.am
src/include/lambdapp/: untyped.h
src/lib/: Makefile.am  untyped.cc
src/test/: Makefile.am  test-lambdapp.cc
